tests: Run the integrations tests against SQ 9.9
SonarQube 9.9 runs on JDK 17 so we need to add the --opens options