@@ -46,6 +46,7 @@ import com.sonar.orchestrator.OrchestratorBuilder;
 import com.sonar.orchestrator.build.GradleBuild;
 import com.sonar.orchestrator.build.MavenBuild;
 import com.sonar.orchestrator.locator.FileLocation;
+import com.sonar.orchestrator.version.Version;
 
 /**
  * @author Guillaume
@@ -74,6 +75,19 @@ public class ErrorAwayIT {
 				.keepBundledPlugins()
 				.setServerProperty("sonar.web.port", "9000")
 				.setSonarVersion("LATEST_RELEASE[" + sonarVersion + "]");
+		
+		if (Version.create(sonarVersion).isGreaterThanOrEquals(9, 9)) {
+			orchestratorBuilder.setServerProperty("sonar.web.javaOpts", "--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED "
+					+ "--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED "
+					+ "--add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED "
+					+ "--add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED "
+					+ "--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED "
+					+ "--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED "
+					+ "--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED "
+					+ "--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED "
+					+ "--add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED "
+					+ "--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED");
+		}
 
 		ORCHESTRATOR = orchestratorBuilder.build();
 		ORCHESTRATOR.start();
